--- a/index.html
+++ b/index.html
@@ -261,9 +261,11 @@
     // Subjects with array of topic markdown files per subject
     const subjects = {
       Syllabus: [
-        { title: "Syllabus Overview", file: "syllabus/overview.md" },
-        { title: "Math Syllabus", file: "syllabus/maths.md" },
-        { title: "English Syllabus", file: "syllabus/english.md" }
+        { title: "ASO Syllabus", file: "syllabus/aso.md" },
+        { title: "SSC(Combined Graduate level)Syllabus", file: "syllabus/ssc.md" },
+        { title: "Bank PO Syllabus", file: "syllabus/bank.md" },
+       { title: "FSSAI Syllabus", file: "syllabus/fssai.md"},
+       { title: "NABARD Syllabus", file: "syllabus/nabard.md"}
       ],
       Maths: [
         { title: "Algebra", file: "maths/algebra.md" },
