--- a/index.html
+++ b/index.html
@@ -265,7 +265,8 @@
         { title: "SSC(Combined Graduate level)Syllabus", file: "syllabus/ssc.md" },
         { title: "Bank PO Syllabus", file: "syllabus/bank.md" },
        { title: "FSSAI Syllabus", file: "syllabus/fssai.md"},
-       { title: "NABARD Syllabus", file: "syllabus/nabard.md"}
+       { title: "NABARD Syllabus", file: "syllabus/nabard.md"},,
+      { title: "List of exams", file: "syllabus/list.md"}
       ],
       Maths: [
         { title: "Algebra", file: "maths/algebra.md" },
